# tagging_db

./: .gitignore  .tagconfig  .tagconfig.backup  .tagconfig.example  README.md  main.py  pixi.toml  pyproject.toml  requirements.txt  run.py  tag.py  tag_history.json  tags.db  tags.md
src/: config.py  engine.py  tag.py
src/storage/: __init__.py  database.py  interfaces.py  markdown.py
tagging_db/: config.py  engine.py  main.py
tagging_db/storage/: __init__.py  database.py  interfaces.py  markdown.py
tests/: test_cli.py  test_config.py  test_engine.py  test_hybrid.py  test_storage.py
