[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tagging-db"
version = "1.0.0"
description = "A powerful CLI tool for tagging files with metadata, supporting fuzzy search, undo, and multiple storage backends."
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Utilities",
]
dependencies = [
    "Click>=8.3.1,<9",
    "SQLAlchemy>=2.0.45,<3",
    "fuzzywuzzy>=0.18.0,<0.19",
    "PyYAML>=6.0.3,<7",
    "rich>=14.2.0,<15",
    "tqdm>=4.67.1,<5",
    "argcomplete>=3.6.3,<4",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2,<10",
]

[project.scripts]
tagging-db = "tagging_db.tag:cli"

[project.urls]
Homepage = "https://github.com/yourusername/tagging-db"
Repository = "https://github.com/yourusername/tagging-db"
Issues = "https://github.com/yourusername/tagging-db/issues"